--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="add_device_settings">New Device</string>
+    <string name="drawer_open">Rooms</string>
+    <string name="drawer_close">Domocracy</string>
 
 </resources>
